--- a/rebar.config
+++ b/rebar.config
@@ -3,5 +3,6 @@
         {cowboy, ".*", {git, "https://github.com/extend/cowboy.git", "HEAD"}},
 	{jsx, ".*", {git, "https://github.com/talentdeficit/jsx.git", "HEAD"}},
         {geef, ".*", {git, "https://github.com/schacon/geef.git", "master"}},
-        {gproc, ".*", {git, "https://github.com/esl/gproc.git", "master"}}
+        {gproc, ".*", {git, "https://github.com/esl/gproc.git", "master"}},
+        {yaml, ".*", {git, "https://github.com/greenelephantlabs/erlang-yaml.git", "master"}}
        ]}.
