typos in kha.hrl; remove geef form rebar.config

--- a/rebar.config
+++ b/rebar.config
@@ -2,7 +2,7 @@
         {confetti, ".*", {git, "https://github.com/jtendo/confetti.git", "HEAD"}},
         {cowboy, ".*", {git, "https://github.com/extend/cowboy.git", "HEAD"}},
 	{jsx, ".*", {git, "https://github.com/talentdeficit/jsx.git", "HEAD"}},
-        {geef, ".*", {git, "https://github.com/schacon/geef.git", "master"}},
+        %%{geef, ".*", {git, "https://github.com/schacon/geef.git", "master"}},
         {gproc, ".*", {git, "https://github.com/esl/gproc.git", "master"}},
         {yaml, ".*", {git, "https://github.com/greenelephantlabs/erlang-yaml.git", "master"}}
        ]}.
