--- a/rebar.config
+++ b/rebar.config
@@ -1,8 +1,9 @@
 {deps, [
         {confetti, ".*", {git, "https://github.com/jtendo/confetti.git", "HEAD"}},
         {cowboy, ".*", {git, "https://github.com/extend/cowboy.git", "HEAD"}},
-	{jsx, ".*", {git, "https://github.com/talentdeficit/jsx.git", "HEAD"}},
+        {jsx, ".*", {git, "https://github.com/talentdeficit/jsx.git", "HEAD"}},
         %%{geef, ".*", {git, "https://github.com/schacon/geef.git", "master"}},
         {gproc, ".*", {git, "https://github.com/esl/gproc.git", "master"}},
-        {yaml, ".*", {git, "https://github.com/greenelephantlabs/erlang-yaml.git", "master"}}
+        {yaml, ".*", {git, "https://github.com/greenelephantlabs/erlang-yaml.git", "master"}},
+        {mimetypes, ".*", {git, "https://github.com/spawngrid/mimetypes.git", "master"}}
        ]}.
