factor out git-related code into erlgit; use 'sh' app for running external executables; don't use exceptions if external executable fails

--- a/rebar.config
+++ b/rebar.config
@@ -5,5 +5,8 @@
         %%{geef, ".*", {git, "https://github.com/schacon/geef.git", "master"}},
         {gproc, ".*", {git, "https://github.com/esl/gproc.git", "master"}},
         {yaml, ".*", {git, "https://github.com/greenelephantlabs/erlang-yaml.git", "master"}},
-        {mimetypes, ".*", {git, "https://github.com/spawngrid/mimetypes.git", "master"}}
+        {mimetypes, ".*", {git, "https://github.com/spawngrid/mimetypes.git", "master"}},
+        {erlgit, ".*", {git, "https://github.com/gleber/erlgit.git", "master"}},
+        {erlsemver, ".*", {git, "https://github.com/gleber/erlsemver.git", "master"}},
+        {sh, ".*", {git, "https://github.com/gleber/sh.git", "master"}}
        ]}.
