--- a/rebar.config
+++ b/rebar.config
@@ -1,3 +1,7 @@
+{erl_opts, [
+        warnings_as_errors
+]}.
+
 {deps, [
         {confetti, ".*", {git, "https://github.com/jtendo/confetti.git", "HEAD"}},
         {cowboy, ".*", {git, "https://github.com/extend/cowboy.git", "HEAD"}},
