--- a/rebar.config
+++ b/rebar.config
@@ -12,5 +12,6 @@
         {mimetypes, ".*", {git, "https://github.com/spawngrid/mimetypes.git", "master"}},
         {erlgit, ".*", {git, "https://github.com/gleber/erlgit.git", "master"}},
         {erlsemver, ".*", {git, "https://github.com/gleber/erlsemver.git", "master"}},
-        {sh, ".*", {git, "https://github.com/gleber/sh.git", "master"}}
+        {sh, ".*", {git, "https://github.com/gleber/sh.git", "master"}},
+        {erlpass, ".*", {git, "https://github.com/ferd/erlpass.git", "master"}}
        ]}.
