--- a/support/kha.config.example
+++ b/support/kha.config.example
@@ -1,1 +1,3 @@
-[{kha, [{host, "example.com"}]}].
+[{kha, [{host, "example.lan"}, 
+        {xmpp_backend, ["kha_bot@example.pl", "192.168.0.1", "qwerty"]}]
+ }].
