--- a/rebar.config
+++ b/rebar.config
@@ -13,5 +13,5 @@
         {erlgit, ".*", {git, "https://github.com/gleber/erlgit.git", "master"}},
         {erlsemver, ".*", {git, "https://github.com/gleber/erlsemver.git", "master"}},
         {sh, ".*", {git, "https://github.com/gleber/sh.git", "master"}},
-        {erlpass, ".*", {git, "https://github.com/ferd/erlpass.git", "master"}}
+        {erlpass, ".*", {git, "https://github.com/greenelephantlabs/erlpass.git", "master"}}
        ]}.
