--- a/rebar.config
+++ b/rebar.config
@@ -9,10 +9,10 @@
         {jsx, ".*", {git, "https://github.com/talentdeficit/jsx.git", "HEAD"}},
         %%{geef, ".*", {git, "https://github.com/schacon/geef.git", "master"}},
         {gproc, ".*", {git, "https://github.com/esl/gproc.git", "master"}},
-        {yaml, ".*", {git, "https://github.com/greenelephantlabs/erlang-yaml.git", "master"}},
         {mimetypes, ".*", {git, "https://github.com/spawngrid/mimetypes.git", "master"}},
         {erlgit, ".*", {git, "https://github.com/gleber/erlgit.git", "master"}},
         {erlsemver, ".*", {git, "https://github.com/gleber/erlsemver.git", "master"}},
         {sh, ".*", {git, "https://github.com/gleber/sh.git", "master"}},
-        {erlpass, ".*", {git, "https://github.com/greenelephantlabs/erlpass.git", "master"}}
+        {erlpass, ".*", {git, "https://github.com/greenelephantlabs/erlpass.git", "master"}},   
+        {yamerl, ".*", {git, "https://github.com/gleber/yamerl.git", "rebarize"}}
        ]}.
