--- a/rebar.config
+++ b/rebar.config
@@ -3,7 +3,7 @@
 ]}.
 
 {deps, [
-        {exmpp, ".*",  {git, "git://github.com/Zert/exmpp.git", "HEAD"}},
+        {exmpp, ".*",  {git, "git://github.com/janin/exmpp.git", "HEAD"}},
         {confetti, ".*", {git, "https://github.com/jtendo/confetti.git", "HEAD"}},
         {cowboy, ".*", {git, "https://github.com/extend/cowboy.git", "HEAD"}},
         {jsx, ".*", {git, "https://github.com/talentdeficit/jsx.git", "HEAD"}},
