improve code reuse

--- a/rebar.config
+++ b/rebar.config
@@ -1,6 +1,6 @@
 {erl_opts, [
-        warnings_as_errors
-]}.
+            warnings_as_errors
+           ]}.
 
 {deps, [
         {exmpp, ".*",  {git, "git://github.com/janin/exmpp.git", "HEAD"}},
@@ -13,6 +13,7 @@
         {erlgit, ".*", {git, "https://github.com/gleber/erlgit.git", "master"}},
         {erlsemver, ".*", {git, "https://github.com/gleber/erlsemver.git", "master"}},
         {sh, ".*", {git, "https://github.com/gleber/sh.git", "master"}},
-        {erlpass, ".*", {git, "https://github.com/greenelephantlabs/erlpass.git", "master"}},   
-        {yamerl, ".*", {git, "https://github.com/gleber/yamerl.git", "rebarize"}}
+        {erlpass, ".*", {git, "https://github.com/greenelephantlabs/erlpass.git", "master"}},
+        {yamerl, ".*", {git, "https://github.com/gleber/yamerl.git", "master"}},
+        {uri, ".*", {git, "https://github.com/puzza007/uri.git", "master"}}
        ]}.
