--- a/rebar.config
+++ b/rebar.config
@@ -5,7 +5,7 @@
 {deps, [
         {exmpp, ".*",  {git, "git://github.com/janin/exmpp.git", "HEAD"}},
         {confetti, ".*", {git, "https://github.com/jtendo/confetti.git", "HEAD"}},
-        {cowboy, ".*", {git, "https://github.com/extend/cowboy.git", "HEAD"}},
+        {cowboy, ".*", {git, "https://github.com/extend/cowboy.git", "0.6.1"}},
         {jsx, ".*", {git, "https://github.com/talentdeficit/jsx.git", "HEAD"}},
         %%{geef, ".*", {git, "https://github.com/schacon/geef.git", "master"}},
         {gproc, ".*", {git, "https://github.com/esl/gproc.git", "master"}},
