use latest cowboy version (currently 0.8.3)

--- a/rebar.config
+++ b/rebar.config
@@ -3,17 +3,18 @@
            ]}.
 
 {deps, [
-        {exmpp, ".*",  {git, "git://github.com/janin/exmpp.git", "HEAD"}},
-        {confetti, ".*", {git, "https://github.com/jtendo/confetti.git", "HEAD"}},
-        {cowboy, ".*", {git, "https://github.com/extend/cowboy.git", "0.6.1"}},
-        {jsx, ".*", {git, "https://github.com/talentdeficit/jsx.git", "HEAD"}},
-        %%{geef, ".*", {git, "https://github.com/schacon/geef.git", "master"}},
-        {gproc, ".*", {git, "https://github.com/esl/gproc.git", "master"}},
-        {mimetypes, ".*", {git, "https://github.com/spawngrid/mimetypes.git", "master"}},
-        {erlgit, ".*", {git, "https://github.com/gleber/erlgit.git", "master"}},
-        {erlsemver, ".*", {git, "https://github.com/gleber/erlsemver.git", "master"}},
-        {sh, ".*", {git, "https://github.com/gleber/sh.git", "master"}},
-        {erlpass, ".*", {git, "https://github.com/greenelephantlabs/erlpass.git", "master"}},
-        {yamerl, ".*", {git, "https://github.com/gleber/yamerl.git", "master"}},
-        {uri, ".*", {git, "https://github.com/puzza007/uri.git", "master"}}
+        {exmpp,      ".*", {git, "https://github.com/janin/exmpp.git",                "HEAD"}},
+        {confetti,   ".*", {git, "https://github.com/jtendo/confetti.git",            {branch, "master"}}},
+        {cowboy,     ".*", {git, "https://github.com/extend/cowboy.git",              "0.8.0"}},
+        {jsx,        ".*", {git, "https://github.com/talentdeficit/jsx.git",          {branch, "master"}}},
+        {gproc,      ".*", {git, "https://github.com/esl/gproc.git",                  {branch, "master"}}},
+        {mimetypes,  ".*", {git, "https://github.com/spawngrid/mimetypes.git",        {branch, "master"}}},
+        {erlgit,     ".*", {git, "https://github.com/gleber/erlgit.git",              {branch, "master"}}},
+        {erlsemver,  ".*", {git, "https://github.com/gleber/erlsemver.git",           {branch, "master"}}},
+        {sh,         ".*", {git, "https://github.com/gleber/sh.git",                  {branch, "master"}}},
+        {erlpass,    ".*", {git, "https://github.com/greenelephantlabs/erlpass.git",  {branch, "master"}}},
+        {yamerl,     ".*", {git, "https://github.com/gleber/yamerl.git",              {branch, "master"}}},
+        {uri,        ".*", {git, "https://github.com/puzza007/uri.git",               {branch, "master"}}}
+
+        %%{geef,     ".*", {git, "https://github.com/schacon/geef.git",               {branch, "master"}}}
        ]}.
