Add dialyzer support; Replace all local include_lib with pure includes (for Dialyzer); Use newer application.erl API; Enable coverage;

--- a/rebar.config
+++ b/rebar.config
@@ -1,20 +1,27 @@
 {erl_opts, [
-            warnings_as_errors
+            warnings_as_errors,
+            fail_on_warning, 
+            debug_info
            ]}.
+{cover_enabled, true}.
+{clean_files, ["*.eunit", "ebin/*.beam"]}.
+{eunit_opts, [verbose]}.
+
 
 {deps, [
-        {exmpp,      ".*", {git, "https://github.com/janin/exmpp.git",                "HEAD"}},
-        {confetti,   ".*", {git, "https://github.com/jtendo/confetti.git",            {branch, "master"}}},
+        {exmpp,      ".*", {git, "https://github.com/jeanparpaillon/exmpp.git",       {branch, "rebar2"}}},
+        %% {confetti,   ".*", {git, "https://github.com/jtendo/confetti.git",            {branch, "master"}}}, 
         {cowboy,     ".*", {git, "https://github.com/extend/cowboy.git",              "0.9.0"}},
-        {jsx,        ".*", {git, "https://github.com/talentdeficit/jsx.git",          {branch, "master"}}},
-        {gproc,      ".*", {git, "https://github.com/esl/gproc.git",                  {branch, "master"}}},
-        {mimetypes,  ".*", {git, "https://github.com/spawngrid/mimetypes.git",        {branch, "master"}}},
         {erlgit,     ".*", {git, "https://github.com/gleber/erlgit.git",              {branch, "master"}}},
-        {erlsemver,  ".*", {git, "https://github.com/gleber/erlsemver.git",           {branch, "master"}}},
-        {sh,         ".*", {git, "https://github.com/gleber/sh.git",                  {branch, "master"}}},
         {erlpass,    ".*", {git, "https://github.com/greenelephantlabs/erlpass.git",  {branch, "master"}}},
+        {erlsemver,  ".*", {git, "https://github.com/gleber/erlsemver.git",           {branch, "master"}}},
+        {gproc,      ".*", {git, "https://github.com/esl/gproc.git",                  {branch, "master"}}},
+        {jsx,     "1.4.3", {git, "https://github.com/talentdeficit/jsx.git",          {branch, "v1.4.3"}}},
+        {mimetypes,  ".*", {git, "https://github.com/spawngrid/mimetypes.git",        {branch, "master"}}},
+        {sh,         ".*", {git, "https://github.com/gleber/sh.git",                  {branch, "master"}}},
+        {uri,        ".*", {git, "https://github.com/puzza007/uri.git",               {branch, "master"}}},
         {yamerl,     ".*", {git, "https://github.com/gleber/yamerl.git",              {branch, "master"}}},
-        {uri,        ".*", {git, "https://github.com/puzza007/uri.git",               {branch, "master"}}}
+        {bcrypt,  "0.5.0", {git, "git://github.com/spawngrid/erlang-bcrypt.git",      {branch, "master"}}}
 
         %%{geef,     ".*", {git, "https://github.com/schacon/geef.git",               {branch, "master"}}}
        ]}.
