WIP rewrite to use docker, prepare docker base and erlang images

--- a/rebar.config
+++ b/rebar.config
@@ -21,7 +21,7 @@
         {sh,         ".*", {git, "https://github.com/gleber/sh.git",                  {branch, "master"}}},
         {uri,        ".*", {git, "https://github.com/puzza007/uri.git",               {branch, "master"}}},
         {yamerl,     ".*", {git, "https://github.com/gleber/yamerl.git",              {branch, "master"}}},
-        {bcrypt,  "0.5.0", {git, "git://github.com/spawngrid/erlang-bcrypt.git",      {branch, "master"}}},
-        {erldocker, ".*",  {git, "git://github.com/greenelephantlabs/erldocker.git",  {branch, "master"}}}
+        {bcrypt,  "0.5.0", {git, "git://github.com/spawngrid/erlang-bcrypt.git",      {branch, "master"}}}
+        %% {erldocker, ".*",  {git, "git://github.com/greenelephantlabs/erldocker.git",  {branch, "master"}}}
         %% {geef,     ".*", {git, "https://github.com/schacon/geef.git",               {branch, "master"}}}
        ]}.
