Update jsx and rebar

--- a/rebar.config
+++ b/rebar.config
@@ -16,7 +16,7 @@
         {erlpass,    ".*", {git, "https://github.com/greenelephantlabs/erlpass.git",  {branch, "master"}}},
         {erlsemver,  ".*", {git, "https://github.com/gleber/erlsemver.git",           {branch, "master"}}},
         {gproc,      ".*", {git, "https://github.com/esl/gproc.git",                  {branch, "master"}}},
-        {jsx,     "1.4.3", {git, "https://github.com/talentdeficit/jsx.git",          {branch, "v1.4.3"}}},
+        {jsx,     "1.4.5", {git, "https://github.com/talentdeficit/jsx.git",          {tag, "v1.4.5"}}},
         {mimetypes,  ".*", {git, "https://github.com/spawngrid/mimetypes.git",        {branch, "master"}}},
         {sh,         ".*", {git, "https://github.com/gleber/sh.git",                  {branch, "master"}}},
         {uri,        ".*", {git, "https://github.com/puzza007/uri.git",               {branch, "master"}}},
